src/components/card/styles.scss
@import "../../variables/colors.json";
@import "../../variables/spacing.json";
@import "../../variables/fonts.json";

@mixin make-card($background: #fff, $foreground: $gray-darker, $padding-horizontal: 20px, $padding-vertical: 20px) {
  box-sizing: border-box;
  background-color: $background;
  border-radius: $border-radius-base;
  overflow: hidden;
  border: none;
  color: $foreground;
  border: 1px solid $gray-light;
}

@mixin make-card-header(
  $color: $gray-darkest,
  $padding-horizontal: 20px,
  $padding-vertical: 20px,
  $font-size: $font-size-3,
  $font-weight: $font-weight-3
) {
  font-family: $font-base;
  color: $color;
  font-size: $font-size;
  font-weight: $font-weight;
  padding: $padding-vertical $padding-horizontal;
  padding-bottom: 0px;

  // Add ellipsis if header is too wide.
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  // Add spacing between card headers and card wells
  & + .card-well {
    margin-top: 20px;
  }
}

@mixin make-card-body(
  $font-size: $font-size-base,
  $font-weight: $font-weight-base,
  $padding-vertical: 20px,
  $padding-horizontal: 20px
) {
  font-family: $font-base;
  font-size: $font-size;

  padding-top: $padding-vertical;
  padding-left: $padding-horizontal;
  padding-right: $padding-horizontal;
  padding-bottom: 20px;
}

@mixin make-card-well(
  $font-size: $font-size-3,
  $font-weight: $font-weight-3
) {
  font-family: $font-base;
  font-size: $font-size;
  font-weight: $font-weight;
  text-align: center;
  line-height: 28px;
  color: $gray-cinder;

  background-color: $gray-lightest;
  padding-top: 80px;
  padding-bottom: 80px;
  padding-left: 20px;
  padding-right: 20px;
}

@mixin make-card-well-highlight {
  color: $brand-primary;
  white-space: nowrap; /* don't wrap in the middle of a highlighted item */
}


@keyframes card-loading-indeterminate-animation {
  0% {
    transform: translate(-100%,0px);
  }
  100% {
    transform: translate(100%,0px);
  }
}
@mixin make-card-loading($color: $brand-primary, $percent: 100%, $height: 2px, $indeterminant: false) {
  width: $percent;
  height: $height;
  background-color: $color;
  margin-bottom: -1 * $height;

  @if $indeterminant {
    // Since the state is indeterminate, the bar has a fixed width.
    width: 100%;
    overflow: hidden;
    animation-name: card-loading-indeterminate-animation;
    animation-duration: 1s;
    animation-iteration-count: infinite;
  } @else {
    // As the bar grows, get longer.
    transition: all 250ms linear;
  }
}

// A normal card.
.card {
  @include make-card;
  .card-header { @include make-card-header($font-size: $font-size-3, $font-weight: $font-weight-3); }
  .card-body { @include make-card-body; }
}

// A modal card.
.card-modal {
  @include make-card($padding-vertical: 40px, $padding-horizontal: 20px);

  .card-header {
    @include make-card-header(
      $font-size: $font-size-2,
      $font-weight: $font-weight-2,
      $padding-vertical: 40px
    );
  }
  .card-body {
    @include make-card-body(
      $padding-vertical: 40px
    );
  }
}

.card-well { @include make-card-well; }
.card-well-highlight { @include make-card-well-highlight; }



.card-loading { @include make-card-loading; }
.card-loading-indeterminate { @include make-card-loading($indeterminant: true); }
.card-dark {
  @include make-card($gray-cinder, #fff);
}

